--- a/.github/workflows/tdapi_file.yaml
+++ b/.github/workflows/tdapi_file.yaml
@@ -54,7 +54,7 @@ jobs:
         run: |
           set -xeo pipefail
           # ====== Variables
-          export REVISION=${{ github.run_number }}
+          export REVISION=4.0.${{ github.run_number }}
           export GH_MATRIX_OS=${{ matrix.os }}
           export GH_MATRIX_ARCH=${{ matrix.arch }}
           export IMPLEMENTATION_NAME=${{ matrix.implementation }}
