--- a/.github/workflows/platform_natives.yaml
+++ b/.github/workflows/platform_natives.yaml
@@ -82,10 +82,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-v3-packages-${{ env.SAFE_TYPE }}-
 
-      - name: ccache
-        uses: hendrikmuhs/ccache-action@v1.2
-        with:
-          key: ${{ github.job }}-${{ matrix.os }}-${{ matrix.type }}
 
       - name: Setup Java (Snapshot)
         if: github.ref == 'refs/heads/develop'
@@ -134,6 +130,10 @@ jobs:
         with:
           packages: make git zlib1g-dev libssl-dev gperf php-cli cmake default-jdk clang-14 lld-14 libc++-14-dev libc++abi-14-dev libgcc-11-dev libunwind-14-dev libclang-common-14-dev ccache maven
           version: 1.0
+      - name: Run sccache-cache
+        uses: mozilla-actions/sccache-action@v0.0.3
+        env:
+          SCCACHE_GHA_ENABLED: "true"
       - name: Install MSVC
         if: matrix.os == 'windows-2019'
         uses: ilammy/msvc-dev-cmd@v1
@@ -178,6 +178,8 @@ jobs:
           echo "REVISION: $REVISION"
           
           source ./.github/workflows/scripts/build_${SAFE_TYPE}.sh
+        env:
+          SCCACHE_GHA_ENABLED: "true"
       - uses: actions/upload-artifact@v3
         with:
           name: tdlight-natives-${{env.REVISION}}-${{env.TYPE}}.jar
