--- a/.github/workflows/platform_natives.yaml
+++ b/.github/workflows/platform_natives.yaml
@@ -114,6 +114,7 @@ jobs:
         shell: bash
         run: |  
           export DEBIAN_FRONTEND=noninteractive
+          sudo apt-get --assume-yes update
           sudo apt-get --assume-yes install make git zlib1g-dev libssl-dev gperf php-cli cmake default-jdk clang-10 lld-10 libc++-10-dev libc++abi-10-dev libgcc-9-dev libunwind-dev libclang-common-10-dev ccache maven
 #      - name: Install ubuntu 20.04 dependencies (cached)
 #        if: matrix.os == 'ubuntu-20.04'
@@ -125,6 +126,7 @@ jobs:
         shell: bash
         run: |
           export DEBIAN_FRONTEND=noninteractive
+          sudo apt-get --assume-yes update
           sudo apt-get --assume-yes install make git zlib1g-dev libssl-dev gperf php-cli cmake default-jdk clang-15 lld-15 libc++-15-dev libc++abi-15-dev libgcc-11-dev libunwind-15-dev libclang-common-15-dev ccache maven
 #      - name: Install ubuntu 22.04 dependencies (cached)
 #        if: matrix.os == 'ubuntu-22.04'
