--- a/.github/workflows/platform_natives.yaml
+++ b/.github/workflows/platform_natives.yaml
@@ -111,6 +111,7 @@ jobs:
           php-version: '8.0'
           extensions: readline
       - name: Install ubuntu 20.04 dependencies
+        if: matrix.os == 'ubuntu-20.04'
         shell: bash
         run: |  
           export DEBIAN_FRONTEND=noninteractive
@@ -123,6 +124,7 @@ jobs:
 #          packages: make git zlib1g-dev libssl-dev gperf php-cli cmake default-jdk clang-10 lld-10 libc++-10-dev libc++abi-10-dev libgcc-9-dev libunwind-dev libclang-common-10-dev ccache maven
 #          version: 1.0
       - name: Install ubuntu 22.04 dependencies
+        if: matrix.os == 'ubuntu-22.04'
         shell: bash
         run: |
           export DEBIAN_FRONTEND=noninteractive
