Try to fix risc-v

--- a/.github/workflows/platform_natives.yaml
+++ b/.github/workflows/platform_natives.yaml
@@ -13,16 +13,19 @@ jobs:
     strategy:
       matrix:
         include:
-          # todo: re-enable
+          # todo: broken ubuntu dependencies, accepting PRs
           #- { os: ubuntu-22.04, type: "linux_386_ssl3" }
-          - { os: ubuntu-20.04, type: "linux_amd64_ssl1" }
-          - { os: ubuntu-22.04, type: "linux_amd64_ssl3" }
-          - { os: ubuntu-20.04, type: "linux_arm64_ssl1" }
-          - { os: ubuntu-22.04, type: "linux_arm64_ssl3" }
-          - { os: ubuntu-22.04, type: "linux_ppc64le_ssl3" }
-          #- { os: ubuntu-22.04, type: "linux_riscv64_ssl3" }
-          - { os: windows-2019, type: "windows_amd64", vcpkgCommitId: "6ca56aeb457f033d344a7106cb3f9f1abf8f4e98", triplet: "x64-windows-static" }
-          - { os: macos-12, type: "macos_amd64" }
+          #- { os: ubuntu-20.04, type: "linux_amd64_ssl1" }
+          #- { os: ubuntu-22.04, type: "linux_amd64_ssl3" }
+          #- { os: ubuntu-20.04, type: "linux_arm64_ssl1" }
+          #- { os: ubuntu-22.04, type: "linux_arm64_ssl3" }
+          #- { os: ubuntu-22.04, type: "linux_ppc64le_ssl3" }
+          # todo: broken ubuntu dependencies, accepting PRs
+          - { os: ubuntu-22.04, type: "linux_riscv64_ssl3" }
+          #- { os: windows-2019, type: "windows_amd64", vcpkgCommitId: "6ca56aeb457f033d344a7106cb3f9f1abf8f4e98", triplet: "x64-windows-static" }
+          #- { os: macos-12, type: "macos_amd64" }
+          # todo: do not enable until github actions adds support to apple silicon, accepting PRs
+          # - { os: macos-12, type: "macos_arm64" }
     steps:
       - name: Checkout current repo
         uses: actions/checkout@v3
