--- a/.github/workflows/platform_natives.yaml
+++ b/.github/workflows/platform_natives.yaml
@@ -17,6 +17,8 @@ jobs:
           #- { os: ubuntu-22.04, type: "linux_386_ssl3" }
           - { os: ubuntu-20.04, type: "linux_amd64_ssl1" }
           - { os: ubuntu-22.04, type: "linux_amd64_ssl3" }
+          - { os: ubuntu-20.04, type: "linux_amd64_gcc_ssl1" }
+          - { os: ubuntu-22.04, type: "linux_amd64_gcc_ssl3" }
           - { os: ubuntu-20.04, type: "linux_arm64_ssl1" }
           - { os: ubuntu-22.04, type: "linux_arm64_ssl3" }
           - { os: ubuntu-22.04, type: "linux_ppc64le_ssl3" }
