--- a/.github/workflows/platform_natives.yaml
+++ b/.github/workflows/platform_natives.yaml
@@ -141,8 +141,9 @@ jobs:
 #        with:
 #          packages: make git zlib1g-dev libssl-dev gperf php-cli cmake default-jdk clang-14 lld-14 libc++-14-dev libc++abi-14-dev libgcc-11-dev libunwind-14-dev libclang-common-14-dev ccache maven
 #          version: 1.0
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
+
+#      - name: Setup tmate session
+#        uses: mxschmitt/action-tmate@v3
 
       - name: Install custom dependencies
         shell: bash
